--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -48,15 +48,18 @@ body {
   border-radius: unset !important;
   border-bottom: 1px solid #e4e0db !important;
   font-weight: 600 !important;
+  margin-left: 10px;;
 }
 .price {
   color: rgb(117, 117, 117);
   font-weight: 600;
   padding-left: 20px;
 }
-.lead {
+.leads {
   color: #bdbdbd;
-  font-size: 15px;
+  font-size: 5px;
+  padding-left: 5px;
+
 }
 .card-text {
   border-bottom: 1px solid #eee;
@@ -94,19 +97,31 @@ body {
   border-bottom: 1px solid #eee;
   padding: 10px;
 }
-.location {
+.contact-detail {
+  display: flex;
+  border-bottom: 1px solid #eee;
+  padding: 10px;
+}
+.location, .category, .phone, .email {
   padding-right: 10px;
   color: #bdbdbd;
   margin-right: 5px;
 }
-.category {
+.phone, .email {
   padding-right: 10px;
   color: #bdbdbd;
   margin-right: 5px;
+}
+.phone > span, .email > span {
+  color: #ff9800;
+
 }
 .jobid,.card-text {
   color: #bdbdbd;
 }
 .card {
   margin-bottom: 10px;
+}
+a {
+  cursor: pointer;
 }
