--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -125,3 +125,41 @@ body {
 a {
   cursor: pointer;
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin-top: 20px;
+  padding: 0;
+ }
+ 
+ .pagination a {
+  cursor: default;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ff9800;
+  color: #ff9800;
+  margin-left: 10px;
+  text-decoration: none;
+ }
+ 
+ .pagination li:not(.disabled) a:hover {
+  background-color: bisque;
+  cursor: pointer;
+ }
+ 
+ .pagination li a {
+  font-weight: bold;
+ }
+ 
+ .pagination li.active a {
+  color: #fff;
+  background: #ff9800;
+ }
+ 
+ .pagination li.disabled a {
+  pointer-events: none;
+  color: rgb(198, 197, 202);
+  border: 1px solid rgb(198, 197, 202);
+ }
